--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "threejs-audio-visualizer",
   "version": "0.0.1",
   "description": "Audio Visualizer with Threejs",
-  "main": "gulpfile.js",
+  "main": "",
   "keywords": [],
   "repository": {
     "type": "git",
@@ -25,14 +25,14 @@
     "css-loader": "^1.0.1",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.2",
-    "node-sass": "^4.10.0",
+    "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.0",
     "uglifyjs-webpack-plugin": "^2.0.0",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.10",
+    "webpack-dev-server": "^3.3.1",
     "webpack-merge": "^4.1.4"
   },
   "dependencies": {
